Report test addded